fix: block and task crud
