# app/Http/Controllers/TaskController.php
@@ -449,7 +449,7 @@ class TaskController extends Controller
                 description: "Type",
                 in: "query",
                 required: false,
-                schema: new OA\Schema(type: "string", enum: ["independent", "goal", "habit", "block"])
+                schema: new OA\Schema(type: "string", enum: ["goal", "habit"])
             )
         ],
         responses: [
@@ -460,20 +460,9 @@ class TaskController extends Controller
                     new OA\JsonContent(
                         properties: [
                             new OA\Property(
-                                property: 'data',
-                                properties: [
-                                    new OA\Property(
-                                        property: 'tasks',
-                                        type: 'array',
-                                        items: new OA\Items(ref: "#/components/schemas/TaskSchema")
-                                    ),
-                                    new OA\Property(
-                                        property: 'blocks',
-                                        type: 'array',
-                                        items: new OA\Items(ref: "#/components/schemas/BlockSchema")
-                                    )
-                                ],
-                                type: 'object'
+                                property: 'tasks',
+                                type: 'array',
+                                items: new OA\Items(ref: "#/components/schemas/TaskSchema")
                             )
                         ]
                     )
@@ -490,10 +479,7 @@ class TaskController extends Controller
         try {
             $data = $this->taskService->list($request->validated());
             return response()->json([
-                'data' => [
-                    'tasks' => TaskResource::collection($data['tasks']),
-                    'blocks' => BlockResource::collection($data['blocks'])
-                ]
+                'data' => TaskResource::collection($data)
             ]);
         } catch (\Exception $e) {
             return response()->json([
@@ -694,84 +680,6 @@ class TaskController extends Controller
         }
     }
 
-
-    #[OA\Get(
-        path: "/api/v1/tasks/missed",
-        summary: "Get missed tasks",
-        security: [
-            ['bearerAuth' => []]
-        ],
-        tags: ["Tasks"],
-        parameters: [
-            new OA\Parameter(
-                name: "page",
-                description: "The number of items to display per page (default 15)",
-                in: "query",
-                required: false,
-                schema: new OA\Schema(type: "integer")
-            ),
-            new OA\Parameter(
-                name: "date",
-                description: "Date to filter by",
-                in: "query",
-                required: false,
-                schema: new OA\Schema(type: "string", format: "date", example: "2024-01-01")
-            ),
-            new OA\Parameter(
-                name: "today",
-                description: "Filter by today",
-                in: "query",
-                required: false,
-                schema: new OA\Schema(type: "boolean")
-            )
-        ],
-        responses: [
-            new OA\Response(
-                response: 200,
-                description: "Tasks found",
-                content: [
-                    new OA\JsonContent(
-                        properties: [
-                            new OA\Property(
-                                property: 'data',
-                                type: 'array',
-                                items: new OA\Items(ref: "#/components/schemas/TaskSchema")
-                            ),
-                            new OA\Property(
-                                property: 'pagination',
-                                ref: "#/components/schemas/PaginatorSchema"
-                            )
-                        ]
-                    )
-                ]
-            ),
-            new OA\Response(
-                response: 400,
-                description: "Bad request"
-            ),
-        ]
-    )]
-    public function getMissedTasks(TaskListQueryParamsRequest $request): JsonResponse
-    {
-        try {
-            $validated = $request->validated();
-            $tasks = $this->taskService->getMissedTasks($validated);
-            if (isset($validated['today']) && $validated['today']) {
-                return response()->json([
-                    'data' => TaskResource::collection($tasks),
-                ]);
-            }
-            return response()->json([
-                'data' => TaskResource::collection($tasks),
-                'pagination' => new PaginatorResource($tasks)
-            ]);
-        } catch (\Exception $e) {
-            Log::error(__METHOD__ . '->' . $e->getMessage());
-            return response()->json([
-                'message' => 'Bad request'
-            ], 400);
-        }
-    }
 
     #[OA\Patch(
         path: "/api/v1/tasks/{id}/urgent",
