# app/Http/Resources/TaskResource.php
@@ -17,9 +17,6 @@ class TaskResource extends JsonResource
     {
         return [
             'id' => $this->id,
-            'block' => $this->block,
-            'goal' => $this->goal,
-            'habit' => $this->habit,
             'title' => $this->title,
             'details' => $this->details,
             'start' => $this->start_date,
